WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259469
REGRESSION: fast/history/visited-link-caret-color.html is a consistent image failure
https://bugs.webkit.org/show_bug.cgi?id=259469
Summary
REGRESSION: fast/history/visited-link-caret-color.html is a consistent image ...
Richard Robinson
Reported
2023-07-24 21:21:34 PDT
rdar://111077813
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2023-07-24 21:23:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16059
EWS
Comment 2
2023-07-25 10:32:06 PDT
Committed
266295@main
(eb3e8157099d): <
https://commits.webkit.org/266295@main
> Reviewed commits have been landed. Closing PR #16059 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug