Cherry-pick eb3e8157099d. rdar://problem/111077813

REGRESSION: fast/history/visited-link-caret-color.html is a consistent image failure
    https://bugs.webkit.org/show_bug.cgi?id=259469
    rdar://111077813

    Reviewed by Megan Gardner and Aditya Keerthi.

    When the caret doesn't need to use the system accent color, it should just get the color the normal
    way, which already both accounts for the visited-ness and any color filter.

    * LayoutTests/fast/history/visited-link-caret-color-expected.html:
    * LayoutTests/fast/history/visited-link-caret-color.html:
    * Source/WebCore/editing/FrameSelection.cpp:
    (WebCore::CaretBase::computeCaretColor):

    Canonical link: https://commits.webkit.org/266295@main
Identifier: 265423.762@safari-7616.1.27.10-branch