Source/WebCore/editing/FrameSelection.cpp
@@ -1930,7 +1930,7 @@ Color CaretBase::computeCaretColor(const RenderStyle& elementStyle, const Node* 
         return elementStyleToUse->colorByApplyingColorFilter(systemAccentColor);
     }
 
-    return elementStyleToUse->colorByApplyingColorFilter(elementStyleToUse->colorResolvingCurrentColor(elementStyleToUse->caretColor()));
+    return elementStyle.visitedDependentColorWithColorFilter(CSSPropertyCaretColor);
 #else
     UNUSED_PARAM(selection);
     RefPtr parentElement = node ? node->parentElement() : nullptr;
